add logo file swagger docs
